--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-source-contentful": "^8.3.1",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "prettier": "^2.8.0"
+    "file-loader": "^6.2.0",
+    "prettier": "^2.8.0",
+    "url-loader": "^4.1.1"
   },
   "keywords": [
     "gatsby"
